# openAIcodex

./: CLAUDE.md  hello_world.py  pyproject.toml
.github/workflows/: ci.yaml
roguelike/: engine.py  input.py  main.py  render.py
roguelike/data/: config.yaml
roguelike/fov/: lighting.py
roguelike/items/: __init__.py  generator.py  item.py
roguelike/map/: __init__.py  generator.py  tile.py
roguelike/persistence/: __init__.py  save_manager.py
roguelike/tests/: test_map.py
roguelike/util/: __init__.py  type_defs.py
