[project]
name = "openaicodex"
version = "0.1.0"
description = ""
authors = [
    {name = "wellwellxd",email = "rogermoc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tcod (>=16,<17)",
    "pygame (>=2.6.1,<3.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "platformdirs (>=4.3.8,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
